# exercism-solutions

python/: .gitignore  .mypy.ini  .ruff.toml  benchmark.sh  pyproject.toml  ty.toml
python/_utils/: __init__.py
python/black-jack/: black_jack.py
python/black-jack/.exercism/: metadata.json
python/card-games/: lists.py
python/card-games/.exercism/: metadata.json
python/cater-waiter/: sets.py
python/cater-waiter/.exercism/: metadata.json
python/chaitanas-colossal-coaster/: list_methods.py
python/chaitanas-colossal-coaster/.exercism/: metadata.json
python/currency-exchange/: exchange.py
python/currency-exchange/.exercism/: metadata.json
python/ellens-alien-game/: classes.py
python/ellens-alien-game/.exercism/: metadata.json
python/ghost-gobble-arcade-game/: arcade_game.py
python/ghost-gobble-arcade-game/.exercism/: metadata.json
python/guidos-gorgeous-lasagna/: lasagna.py
python/guidos-gorgeous-lasagna/.exercism/: metadata.json
python/hello-world/.exercism/: metadata.json
python/inventory-management/: dicts.py
python/inventory-management/.exercism/: metadata.json
python/leap/: __init__.py  benchmark.py  benchmark.txt  leap.py  leap_benchmark.py
python/leap/es/: __init__.py  (+2 more)
python/little-sisters-essay/: string_methods.py
python/little-sisters-vocab/: strings.py
python/locomotive-engineer/: locomotive_engineer.py
python/making-the-grade/: loops.py
python/mecha-munch-management/: dict_methods.py
python/meltdown-mitigation/: conditionals.py
python/plane-tickets/: generators.py
python/tisbury-treasure-hunt/: tuples.py
(+124 files in other folders)
